--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <div class="portfolio_image">
                     <div class="image_group">
                         <a href="https://github.com/l0gOut/Flashcards" title="Переход к репозитрию с проектом" target="_blank">
-                            <img  src="images/project1.png" alt="Flashcards" width="300" height="200">
+                            <img  src="images/project1.png" alt="Flashcards" class="image_portfolio">
                             <p class="image_text">Flashcards</p>
                         </a>
                     </div>
                     <div class="image_group">
-                        <a>
-                            <img src="images/project2.png" alt="Virtual Piano" width="300" height="200">
+                        <a href="https://github.com/l0gOut/VirtualPiano" title="Переход к репозиторию с проектмо" target="_blank">
+                            <img src="images/project2.png" alt="Virtual Piano" class="image_portfolio">
                             <p class="image_text">Virtual Piano</p>
                             </a>
                     </div>
