--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
             <div class="text_about_me">
                 <h2 class="h2_about_me">About me</h2>
+                <span></span>
                 <div class="div_about_text">
                     <p>Hi, I'm Daniil Petrunin. I've been a junior front-end developer for 5 months now.</p>
                     <p>For me programming is not just a job, it's a hobby.</p>
