--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <div class="div_portfolio_text" data-div-virtual-piano>
         <div class="div_portfolio_h1">
-            <div>Virtual Piano</div>
+            <h1>Virtual Piano</h1>
             <button data-button-exit>x</button>
         </div>
         <div class="div_portfolio_text_about">
-            <div>Что то написано</div>
+            <div>В данном проекте вы сможете сыграть на "пианино" нажимая кнопки на клавиатуре, перейдя по ссылке <a href="https://github.com/l0gOut/VirtualPiano" target="_blank">"Virtual Piano"</a> вы перейдете на репозиторий GitHub, в котором будет находится проект!</div>
         </div>
     </div>
     <section about="Home" id="Home">
