--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <a class="a_header" href="#About_me" title="About me"><li class="li_items li1">ABOUT ME</li></a>
             <a class="a_header" href="#Home" title="Home"><li class="li_items li4">HOME</li></a>
         </ul>
+        <input id="#burger" type="checkbox">
+        <label for="#burger" class="div_burger">
+            <span class="burger"></span>
+        </label>
     </nav>
     <div class="background_dialog" data-background></div>
     <div class="div_portfolio_text" data-div-flashcards>
