--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/social_SoundCloud_cloud_7.png"/>
 </head>
 <body>
+    <input id="#burger" type="checkbox">
     <nav class="nav_tag">
         <ul class="list_ul" title="Навигация по сайту" id="ul_id">
             <a class="a_header" href="#Contacts" title="Contacts"><li class="li_items li3">CONTACTS</li></a>
@@ -14,12 +15,19 @@
             <a class="a_header" href="#About_me" title="About me"><li class="li_items li1">ABOUT ME</li></a>
             <a class="a_header" href="#Home" title="Home"><li class="li_items li4">HOME</li></a>
         </ul>
-        <input id="#burger" type="checkbox">
         <label for="#burger" class="div_burger">
             <span class="burger"></span>
         </label>
     </nav>
-    <div class="background_dialog" data-background></div>
+    <div class="navigation_burger">
+        <ul class="list_ul_burger" title="Навигация по сайту" id="ul_id_burger">
+            <a class="a_header_burger" href="#Home" title="Home"><li class="li_items_burger li4">HOME</li></a>
+            <a class="a_header_burger" href="#About_me" title="About me"><li class="li_items_burger li1">ABOUT ME</li></a>
+            <a class="a_header_burger" href="#Portfolio" title="Portfolio"><li class="li_items_burger li2">PORTFOLIO</li></a>
+            <a class="a_header_burger" href="#Contacts" title="Contacts"><li class="li_items_burger li3">CONTACTS</li></a>
+        </ul>
+    </div>
+    <div class="background_dialog time" data-background></div>
     <div class="div_portfolio_text" data-div-flashcards>
         <div class="div_portfolio_h1">
             <h1>Flashcards</h1>
